Bug 195188 - When album cover is changed the OSD is not updated
Summary: When album cover is changed the OSD is not updated
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Notifications (other bugs)
Version First Reported In: 2.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-04 11:23 UTC by Gandalf Lechner
Modified: 2009-10-11 09:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gandalf Lechner 2009-06-04 11:23:50 UTC
Version:           2.1 (using 4.2.4 (KDE 4.2.4), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.28-12-generic

When an album cover is changed, either by the get cover function or by manually selecting a new cover, it is not updated in the OSD. This bug does not show up if the album had no cover before, but only when there was a (wrong) cover assigned before and it is changed to a different one.
Comment 1 Myriam Schweingruber 2009-06-04 15:33:13 UTC
I can confirm this with 2.1-SVN, build 03.06.2009
Comment 2 Ryan Rix 2009-10-05 06:53:10 UTC
+1 on Amarok 2.2 Stable.
Comment 3 Mark Kretschmann 2009-10-05 10:15:58 UTC
I'll look into this.
Comment 4 Mark Kretschmann 2009-10-11 08:32:18 UTC
This is probably also a regression caused by this commit:


commit ba24bbf839143577713b3b256623a792a4028e0f
Author: Seb Ruiz <ruiz@kde.org>
Date:   Sun Jun 21 01:03:08 2009 +0000

    The OSD no longer subscribes to metadata changes. This fixes showing the
    osd when a track finishes (because finishedPlaying updates stats which
    notifies observers). It also fixes annoying problems of showing the osd
    when metadata changes (eg, editing a title) or the scanner updates a
    particular Track.

    svn path=/trunk/extragear/multimedia/amarok/; revision=984541
Comment 5 Mark Kretschmann 2009-10-11 09:46:20 UTC
I've fixed it, enjoy:


commit 1dfef177d165bba2aff7b83e0d4b057e914c4968
Author: Mark Kretschmann <kretschmann@kde.org>
Date:   Sun Oct 11 09:45:02 2009 +0200

    Fix: On Screen Display was not shown when cover image changed.

    BUG: 195188