Fix: On Screen Display was not shown when cover image changed.

BUG: 195188